--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -29,6 +29,9 @@
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/characters']">Personajes</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/logs']">Logs</a>
+          </li>
         </ul>
   
         <!-- Perfil del usuario en la esquina superior derecha -->
