--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,55 +1,31 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <!-- Logo o nombre de la aplicación -->
-      <a class="navbar-brand" href="#">Mi App</a>
-  
-      <!-- Botón para colapsar el navbar en dispositivos pequeños -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+<mat-toolbar color="primary" class="mat-navbar">
+  <div class="mat-navbar-content">
+    <span class="mat-navbar-brand" routerLink="/">AniManga</span>
+
+    <nav class="mat-navbar-links">
+      <a mat-button routerLink="/genre-crud">Géneros</a>
+      <a mat-button routerLink="/authors">Autores</a>
+      <a mat-button routerLink="/studios">Estudios</a>
+      <a mat-button routerLink="/mangas">Mangas</a>
+      <a mat-button routerLink="/animes">Animes</a>
+      <a mat-button routerLink="/characters">Personajes</a>
+      <a mat-button *ngIf="isAdmin()" routerLink="/logs">Logs</a>
+      <a mat-button *ngIf="isAdmin()" routerLink="/users">Users</a>
+    </nav>
+
+    <button mat-button [matMenuTriggerFor]="userMenu" class="mat-user-menu">
+      <mat-icon>account_circle</mat-icon>
+      <span>{{ userName }}</span>
+    </button>
+    <mat-menu #userMenu="matMenu">
+      <button mat-menu-item routerLink="/profile">
+        <mat-icon>person</mat-icon>
+        <span>Mi Perfil</span>
       </button>
-  
-      <!-- Opciones de navegación -->
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/genre-crud']">Géneros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/authors']">Autores</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/studios']">Estudios</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/mangas']">Mangas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/animes']">Animes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/characters']">Personajes</a>
-          </li>
-          <li class="nav-item" *ngIf="isAdmin()">
-            <a class="nav-link" [routerLink]="['/logs']">Logs</a>
-          </li>
-          <li class="nav-item" *ngIf="isAdmin()">
-            <a class="nav-link" [routerLink]="['/users']">Users</a>
-          </li>
-        </ul>
-  
-        <!-- Perfil del usuario en la esquina superior derecha -->
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              {{ userName }} <!-- Nombre del usuario -->
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <li>
-                <a class="dropdown-item" (click)="onLogout()">Cerrar sesión</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+      <button mat-menu-item (click)="onLogout()">
+        <mat-icon>logout</mat-icon>
+        <span>Cerrar sesión</span>
+      </button>
+    </mat-menu>
+  </div>
+</mat-toolbar>
